@@ -2,6 +2,12 @@
 Version 1.14.1
 *******************************************************************************
 
+2020-11-30 Marcelo Jimenez <marcelo.jimenez(at)gmail.com>
+
+        GitHub #203 by Vollstrecker
+
+        Remove the now unused file ClientSubscription.c.
+
 *******************************************************************************
 Version 1.14.0
 *******************************************************************************
